2005-06-09  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: Revert fix for bug #109238
	since it creates glib-WARNINGS when g_set_application_name()
	is called elsewhere first.

2005-05-30  Kjartan Maraas  <kmaraas@gnome.org>

	* Merge fix for bug #305464 from stable.

2005-05-18  Alexander Larsson  <alexl@redhat.com>

	* libgnome/gnome-config.c:
	* libgnome/gnome-help.c:
	Use g_get_language_names() instead of gnome_i18n_get_language_list.
	
	* libgnome/gnome-i18n.c:
	Implement gnome_i18n_get_language_list using g_get_language_names
	instead of bonobo_activation_get_language_list.
	Mention in docs that you should use g_get_language_list, and that
	the category field now is ignored.

2004-10-20  Vinay M R  <vinay.mandyakoppal@wipro.com>

	* libgnome/gnome-util.h: Fix the problem of
	Launcher unusable as root in solaris.
	Fixes bug #155913.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-gconf.c: Fix build with newer GCC. Patch
	from Ryan Lortie. Closes bug #169857.

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_interface.schemas.in: added a gconf key to 
	configure the gtk-menu-bar-accelerator.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in:
	Patch from Shaun McCance to add schemas for document
	font setting. Closes bug #160453

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Fix build on ia64. Patch from Sebastien
	Bacher. Closes bug #148996.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Use
	the correct key name for both-horiz. Patch from
	Christian Neumair. Closes bug #145004.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.c: Add #include <strings.h>
	* monikers/bonobo-config-bag.c: Make a function static

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c:
	Pass the GNOME_PARAM_HUMAN_READABLE_NAME property